Finish section 'Adding a title, author and date'

--- a/1.tex
+++ b/1.tex
@@ -1,6 +1,12 @@
-\documentclass{article}
-
+\documentclass[12pt, a4paper]{article}
+\usepackage[utf8]{inputenc}
+\title{My first \LaTeX{} document}
+\author{Henry Cooksley \thanks{funded by the Overleaf team}}
+\date{\today}
 \begin{document}
-First document. This is a simple example, with no
-extra parameters or packages included.
+
+\maketitle
+
+We have now added a title, author and date to our first \LaTeX{} document!
+
 \end{document}
