--- a/1.tex
+++ b/1.tex
@@ -9,4 +9,22 @@
 
 We have now added a title, author and date to our first \LaTeX{} document!
 
+% This line here is a comment. It will not be printed in the document.
+
+Some of the \textbf{greatest}
+discoveries in \underline{science}
+were made by \textbf{\textit{accident}}.
+
+Some of the greatest \emph{discoveries}
+in science
+were made by accident.
+
+\textit{Some of the greatest \emph{discoveries} 
+in science 
+were made by accident.}
+
+\textbf{Some of the greatest \emph{discoveries} 
+in science 
+were made by accident.}
+
 \end{document}
