--- a/1.tex
+++ b/1.tex
@@ -1,30 +1,12 @@
-\documentclass[12pt, a4paper]{article}
-\usepackage[utf8]{inputenc}
-\title{My first \LaTeX{} document}
-\author{Henry Cooksley \thanks{funded by the Overleaf team}}
-\date{\today}
+\documentclass{article}
+\usepackage{graphicx}
+\graphicspath{ {images/} }
+
 \begin{document}
+The universe is immense and it seems to be homogeneous, 
+in a large scale, everywhere we look at.
 
-\maketitle
+\includegraphics{business-dog.png}
 
-We have now added a title, author and date to our first \LaTeX{} document!
-
-% This line here is a comment. It will not be printed in the document.
-
-Some of the \textbf{greatest}
-discoveries in \underline{science}
-were made by \textbf{\textit{accident}}.
-
-Some of the greatest \emph{discoveries}
-in science
-were made by accident.
-
-\textit{Some of the greatest \emph{discoveries} 
-in science 
-were made by accident.}
-
-\textbf{Some of the greatest \emph{discoveries} 
-in science 
-were made by accident.}
-
+There's a picture of a dog above
 \end{document}
