Finish 'Ordered lists'

--- a/1.tex
+++ b/1.tex
@@ -1,12 +1,10 @@
 \documentclass{article}
-\usepackage{graphicx}
-\graphicspath{ {images/} }
 
 \begin{document}
-The universe is immense and it seems to be homogeneous, 
-in a large scale, everywhere we look at.
 
-\includegraphics{business-dog.png}
+\begin{enumerate}
+    \item This is the first entry in our list
+    \item The list numbers increase with each entry we add
+\end{enumerate}
 
-There's a picture of a dog above
 \end{document}
