--- a/1.tex
+++ b/1.tex
@@ -1,28 +1,35 @@
-\documentclass[12pt, a4paper]{report}
-\usepackage{blindtext}
+\documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
+\title{Sections and Chapters}
+\author{Gubert Farnsworth}
+\date{ }
+  
 \begin{document}
-\chapter{First Chapter}
+  
+\maketitle
+  
+\tableofcontents
 
 \section{Introduction}
-
+   
 This is the first section.
-
+      
 Lorem  ipsum  dolor  sit  amet,  consectetuer  adipiscing  
 elit.   Etiam  lobortisfacilisis sem.  Nullam nec mi et 
 neque pharetra sollicitudin.  Praesent imperdietmi nec ante. 
 Donec ullamcorper, felis non sodales...
-
-\section{Second Section}
+       
+\addcontentsline{toc}{section}{Unnumbered Section}
+\section*{Unnumbered Section}
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  
 Etiam lobortis facilisissem.  Nullam nec mi et neque pharetra 
 sollicitudin.  Praesent imperdiet mi necante...
 
-\subsection{First Subsection}
-Praesent imperdietmi nec ante. Donec ullamcorper, felis non sodales...
-
-\section*{Unnumbered Section}
+\section{Second Section}
+       
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  
-Etiam lobortis facilisissem
+Etiam lobortis facilisissem.  Nullam nec mi et neque pharetra 
+sollicitudin.  Praesent imperdiet mi necante...
+         
 \end{document}
